examples/test/testpolicy17084.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17084
  namespace: namespace207
spec:
  podSelector:
    matchLabels:
      key49: value3
      key31: value47
      key44: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value36
          key34: value33
      podSelector:
        matchLabels:
          key44: value11
          key25: value22
          key13: value10
